--- a/Employee_SQL/SQL_challenge_bonus.ipynb
+++ b/Employee_SQL/SQL_challenge_bonus.ipynb
@@ -10,8 +10,42 @@
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
     "from sqlalchemy.ext.declarative import declarative_base\n",
+    "from sqlalchemy import Column, Integer, String, Float\n",
+    "\n",
     "engine = create_engine(f'postgresql://{username}:{password}@localhost:5432/employees')\n",
     "connection = engine.connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base = declarative_base()\n",
+    "\n",
+    "class Employees(Base) :\n",
+    "    __tablename__ = 'employees'\n",
+    "    emp_no = Column(Integer, primary_key = True)\n",
+    "    emp_title_id = Column(String(10))\n",
+    "    bith_date = Column(date)\n",
+    "    first_name = Column(String(30))\n",
+    "    last_name = Column(String(30))\n",
+    "    sex = Column(String(10))\n",
+    "    hire_date = Column(date)\n",
+    "    \n",
+    "class Salaries(Base) :\n",
+    "    __tablename__ = 'salaries'\n",
+    "    emp_no = Column(Integer, foreign_key = True)\n",
+    "    salary = Column(Integer)\n",
+    "    \n",
+    "    \n",
+    "class Titles(Base) :\n",
+    "    __tablename__ = 'titles'\n",
+    "    title_id = Column(String(10), pimary_key = True)\n",
+    "    title = Column(String(30))\n",
+    "\n",
+    "    "
    ]
   },
   {
